// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`core.actions checkSession should set submitting on start 1`] = `
[
  "getEntity",
  "lock",
  "id",
]
`;

exports[`core.actions checkSession should set submitting on start 2`] = `
[
  "updateEntity",
  "lock",
  "id",
  [Function],
]
`;

exports[`core.actions checkSession should set submitting on start 3`] = `
[
  "model",
  true,
]
`;
